spacing fixed

--- a/stokkapp/static/styles/item.css
+++ b/stokkapp/static/styles/item.css
@@ -9,6 +9,10 @@
     padding: 0%;
 }
 
+.p-3 {
+    padding: 0%!important;
+}
+
 .item_container {
     margin-bottom: 10rem;
     
